--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -24,9 +24,26 @@ li {
 	text-align: left;
 }
 
-header {
-	height: $header-height;
-	background: #db4c3f;
+table{
+    border-collapse: collapse;
+}
+
+td {
+    vertical-align: top;
+}
+
+#top_bar {
+    height: 43px;
+    background-color: #fff;
+    top: 0;
+    position: fixed;
+    z-index: 200;
+    width: 100%;
+    border-bottom: solid 1px #ca2100;
+    background-color: #db4c3f;
+    -webkit-transition: height 200ms ease-in;
+    transition: height 200ms ease-in;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 	
 	.container {
 		margin-left: 150px;
@@ -56,19 +73,6 @@ header {
 	-webkit-animation-name: fadeIn;
 	animation-duration: 120ms;
 	-webkit-animation-duration: 120ms;
-}
-
-.left_menu {
-	float: left;
-	width: $left-menu-width;
-	background-color: #fafafa;
-	height: 400px;
-	padding-top: 7+$header-height;
-	position: fixed;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	padding-left: $left-menu-padding-left;
-	border-right: 1px solid #f1f1f1;
 }
 
 #main_content {
