--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import 'generic-left-list.scss';
+
 $left-menu-width: 250px;
 $left-menu-padding-left: 35px;
 
@@ -33,6 +35,100 @@ img {
   vertical-align: middle;
 }
 
+@font-face {
+  font-family: "fontist";
+  src: url(https://d3ptyyxy2at9ui.cloudfront.net/f36f23ebdbcd2bbef3f7f3852679f2ef.eot);
+  src: url(https://d3ptyyxy2at9ui.cloudfront.net/f36f23ebdbcd2bbef3f7f3852679f2ef.eot#iefix) format("embedded-opentype"), url(https://d3ptyyxy2at9ui.cloudfront.net/bd0e409c04f04a8219e567896509f2f3.woff) format("woff"), url(https://d3ptyyxy2at9ui.cloudfront.net/438fd20e5fbc343608903f287cb1c433.ttf) format("truetype"), url(https://d3ptyyxy2at9ui.cloudfront.net/535882d3ffba25fa5b9685000bbb97cf.svg#fontist) format("svg");
+  font-weight: normal;
+  font-style: normal
+}
+
+.arrow {
+  position: absolute;
+  margin-left: -18px;
+  cursor: pointer;
+  z-index: 20;
+}
+
+.menu {
+  vertical-align: top;
+  text-align: right;
+}
+
+.menu.icon {
+  border: none !important;
+}
+
+.items .icon {
+  cursor: pointer;
+  width: 22px;
+}
+
+.gear_menu {
+  opacity: .5;
+}
+
+td.menu {
+  cursor: pointer;
+}
+
+.items {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  table {
+    border-collapse: collapse;
+  }
+}
+
+.td_separator {
+  padding: 0 1px;
+}
+
+.td_color {
+  vertical-align: top;
+  text-align: left;
+  white-space: nowrap;
+  min-width: 20px;
+  padding-left: 5px !important;
+}
+
+.counter_color {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 16px;
+}
+
+.icon-project:before {
+  content: "c";
+}
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontist" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.current {
+  cursor: default;
+}
+
+.name {
+  width: 100%;
+  line-height: 17px;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
 .holder {
   max-width: 950px;
   margin-left: 150px;
@@ -40,6 +136,13 @@ img {
   -webkit-animation-name: fadeIn;
   animation-duration: 120ms;
   -webkit-animation-duration: 120ms;
+}
+
+.counter_count {
+  display: inline;
+  color: #bbb;
+  padding-left: 5px;
+  font-size: 11px;
 }
 
 #main_content {
@@ -59,8 +162,3 @@ img {
   }
 }
 
-.items {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
