--- a/client/assets/stylesheets/icon.scss
+++ b/client/assets/stylesheets/icon.scss
@@ -17,3 +17,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.note_icon {
+  margin-left: 5px;
+  cursor: pointer;
+  padding: 4px 7px;
+  white-space: nowrap;
+
+  span {
+    position: relative;
+    top: 1px;
+    color: #555 !important;
+    padding-left: 3px;
+  }
+}
